--- a/css/Main.css
+++ b/css/Main.css
@@ -1,11 +1,13 @@
 
-
+html{
+    margin:0;
+    padding:0;
+}
 
 .nome{
     color: #fff;
     font-size: 30px;
-   
-}
+   }
 .fundo{
     background-image: linear-gradient(45deg, black, green);
     height: 100vh;
@@ -21,6 +23,7 @@
     transform: translate(-50%,-50%);
     border-radius: 15px;
     padding: 15px;
+    
 }
 .botao{
 width: 50px; 
@@ -35,19 +38,33 @@ color:#fff;
 .botao:hover{
     background-color: black;
 }
-.botao2{
-height: 106px;
+.botao1{
+height: 110px;
+width:50px;
+font-size: 25px;
+cursor: pointer;
+margin:3px;
+background-color: rgb(31,31,31);
+border:none;
+color:#fff;
 } 
-.botao3{
-    width: 106px;
+.botao2{
+    width: 110px;
+    height: 50px;
+    font-size: 25px;
+cursor: pointer;
+margin:3px;
+background-color: rgb(31,31,31);
+border:none;
+color:#fff;
     } 
     #resultado{
         background-color: #fff;
-        width: 207px;
+        width: 216px;
         height:30px;
         margin:5px;
         font-size: 25px;
         color:black;
         text-align: right;
-        padding: 5px;
+        padding: 7px;
     }
