--- a/css/Main.css
+++ b/css/Main.css
@@ -48,6 +48,9 @@ background-color: rgb(31,31,31);
 border:none;
 color:#fff;
 } 
+.botao1:hover{
+    background-color: black;
+}
 .botao2{
     width: 110px;
     height: 50px;
@@ -58,6 +61,9 @@ background-color: rgb(31,31,31);
 border:none;
 color:#fff;
     } 
+    .botao2:hover{
+        background-color: black;
+    }
     #resultado{
         background-color: #fff;
         width: 216px;
